Исправить замечания ревью