@@ -4,14 +4,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Repository;
 import ru.practicum.shareit.item.model.Item;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Repository
 @Slf4j
 public class InMemoryItemRepository implements ItemRepository {
     private final Map<Long, Item> items = new HashMap<>();
+    private final Map<Long, List<Long>> userItemIndex = new LinkedHashMap<>();
     private long itemId;
 
     @Override
@@ -19,6 +19,7 @@ public class InMemoryItemRepository implements ItemRepository {
         log.debug("==> Save item {}", item);
         item.setId(generateId());
         items.put(item.getId(), item);
+        userItemIndex.computeIfAbsent(item.getOwnerId(), id -> new ArrayList<>()).add(item.getId());
         log.debug("<== Item saved {}", item);
         return item;
     }
@@ -27,10 +28,10 @@ public class InMemoryItemRepository implements ItemRepository {
     public Item update(Long ownerId, Item item) {
         log.debug("==> Update item {}", item);
         Item oldItem = items.get(item.getId());
-        if (item.getName() != null) {
+        if (item.getName() != null && !item.getName().isBlank()) {
             oldItem.setName(item.getName());
         }
-        if (item.getDescription() != null) {
+        if (item.getDescription() != null && !item.getDescription().isBlank()) {
             oldItem.setDescription(item.getDescription());
         }
         if (item.getAvailable() != null) {
@@ -41,9 +42,9 @@ public class InMemoryItemRepository implements ItemRepository {
     }
 
     @Override
-    public Item get(Long ownerId, Long itemId) {
+    public Optional<Item> get(Long ownerId, Long itemId) {
         log.debug("==> Get item {}", itemId);
-        Item item = items.get(itemId);
+        Optional<Item> item = Optional.ofNullable(items.get(itemId));
         log.debug("<== Item received {}", item);
         return item;
     }
@@ -51,22 +52,20 @@ public class InMemoryItemRepository implements ItemRepository {
     @Override
     public List<Item> getAllForUser(Long ownerId) {
         log.debug("==> Get all items from user {}", ownerId);
-        List<Item> itemsList = items.values().stream()
-                .filter(item -> item.getOwnerId().equals(ownerId))
-                .toList();
-        log.debug("<==  Items {} from user received {} ", items, ownerId);
+        List<Item> itemsList = userItemIndex.get(ownerId).stream()
+                .map(items::get)
+                .collect(Collectors.toList());
+        log.debug("<==  Items {} from user received {} ", itemsList, ownerId);
         return itemsList;
     }
 
     @Override
     public List<Item> search(String text) {
         log.debug("==> Search items with text {}", text);
-        if (text.isBlank()) {
-            return List.of();
-        }
+        String textLowerCase = text.toLowerCase();
         List<Item> result = items.values().stream()
-                .filter(item -> (item.getDescription().toLowerCase().contains(text.toLowerCase()) ||
-                        item.getName().toLowerCase().contains(text.toLowerCase()))
+                .filter(item -> (item.getDescription().toLowerCase().contains(textLowerCase) ||
+                        item.getName().toLowerCase().contains(textLowerCase))
                         && item.getAvailable())
                 .toList();
         log.debug("<== Search for items {} with text {}", result, text);
